# Sparkle-Launcher

./: .gitignore  index.html  package-lock.json  package.json
.github/workflows/: release.yml
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: AccountDropdown.vue  AppIcon.vue  ColorPicker.vue  PlayerAvatar.vue  SettingsModal.vue  Sidebar.vue  Titlebar.vue
src/components/tabs/: ChangelogTab.vue  LogsTab.vue  PlayTab.vue
src/components/ui/: AppButton.vue  DropdownMenu.vue  EmptyState.vue  Icon.vue  SearchBox.vue  SettingsActionButton.vue  StatusButton.vue  ToastNotification.vue  ToggleSwitch.vue  UpdateNotification.vue
src/composables/: useAppUpdater.ts  useChangelogs.ts  useClearSearch.ts  useCopyToClipboard.ts  useDebouncedSave.ts  useDebouncedValue.ts  useFilteredList.ts  useInFlight.ts  useLoadableData.ts  useMinecraftLogs.ts  useOptimizedScroll.ts  useShowInFolder.ts  useSkinRenderer.ts  useToast.ts  useToastDismiss.ts  useToggle.ts  useToggleItem.ts
src/directives/: tooltip.ts
src/router/: index.ts
src/stores/: auth.ts  launcher.ts  theme.ts
src/styles/: main.css
src/types/: culori.d.ts
src/utils/: array.ts  formats.ts  hash.ts  selectors.ts
src/views/: HomeView.css  HomeView.vue  LoginView.vue
