[package]
name = "sparkle-app"
version = "0.1.0"
description = "Sparkle Minecraft Launcher"
authors = ["Saber"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "sparkle_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }

tauri-plugin-opener = "2"
tauri-plugin-store = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }

sha2 = "0.10"
sha1 = "0.10"
base64 = "0.22"
rand = "0.8"

url = "2"
urlencoding = "2"

zip = "2"
tar = "0.4"
tempfile = "3"

anyhow = "1"
futures = "0.3"
chrono = { version = "0.4", features = ["serde"] }

hex = "0.4" 
walkdir = "2.5.0"
flate2 = "1.1.9"
toml = "1.1.2"
sha1_smol = "1.0.1"
parking_lot = "0.12.5"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio-rustls", "macros", "chrono"] }
sysinfo = "0.39.6"
tauri-plugin-updater = "2.10.1"
tauri-plugin-process = "2.3.1"
